gitops/system/base/kube-prometheus-stack/httproute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - prometheus.scw.sovereigncloudwisdom.eu
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
